# algo-trade

./: .dockerignore  .drone.yml  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  backtest.py  main.py  predict.py  predict_hierarchical.py  pyproject.toml  test_engine.py  test_predict_api.py  trade.py  train_l1.py  train_l2.py  train_l3.py  train_universal.py
.gemini/: print_to_logger_fix_report.md
config/: best_params.json  dynamic_params.py  settings.py
data/: meta_training_data.csv  preprocessor.py  provider.py  redis_manager.py  streamer.py  trading_state.json
data/cache/: NIO_1m_20260105_20260107.parquet  SPY_1d_20230101_20241231.parquet  SPY_1d_20250312_20260107.parquet  SPY_1d_20251122_20260106.parquet  TLT_1d_20230101_20241231.parquet  (+6 more)
features/: builder.py  macro.py  technical.py
models/: best_params.json  constants.py  dynamic_params.py  engine.py  l3_execution.joblib  meta_strategy.py  robust_trainer.py  smc_rules.py  trainer.py  universal_pa_smc.joblib  universal_pa_smc_classifier.joblib
reports/: backtest_l3_NVDA_trades.csv  backtest_l3_TSLA_trades.csv
scripts/: backtest.py  backtest_l1.py  backtest_l2.py  backtest_l3.py  backtest_l4.py  backtest_vbt.py  generate_meta_data.py  inspect_features.py  optimize_l2.py  optimize_l3.py  test_market_check.py  test_preprocessing.py  train_l1.py  train_l2.py  train_l3.py  train_l4.py  train_l5.py
scripts/legacy/: main.py  (+2 more)
strategies/: engine.py  meta_strategy.py  smc_rules.py
training/: trainer.py
utils/: __init__.py  logger.py
web/: __init__.py  server.py  state_manager.py
(+12 files in other folders)
