[project]
name = "algo-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.2",
    "anywidget>=0.9.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "python-dotenv>=1.2.1",
    "quantstats>=0.0.62",
    "scikit-learn>=1.8.0",
    "ta-lib>=0.6.8",
    "vectorbt>=0.28.2",
    "pyarrow>=14.0.0",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

